--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mga-team-website",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "start": "vite",
     "build": "vite build",
     "preview": "vite preview --port 4173"
   },
@@ -10,13 +10,18 @@
     "chroma-js": "^2.4.2",
     "three": "^0.134.0",
     "troisjs": "^0.3.4",
-    "vue": "^3.2.38"
+    "vue": "^3.2.38",
+    "vue-router": "^4.1.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
+    "eslint": "^8.25.0",
+    "eslint-plugin-vue": "^9.6.0",
     "node-sass": "^7.0.3",
     "sass": "^1.55.0",
     "sass-loader": "^13.1.0",
-    "vite": "^3.0.9"
+    "vite": "^3.0.9",
+    "vue-loader": "^17.0.0",
+    "vue-template-compiler": "^2.7.13"
   }
 }
