--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "three": "^0.134.0",
     "troisjs": "^0.3.4",
     "vue": "^3.2.38",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "vue3-parallax": "^0.1.4",
+    "vue3-smooth-scroll": "^0.8.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
